--- a/index.html
+++ b/index.html
@@ -10,20 +10,28 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <main>
+    <img src="./assets/images/illustration-article.svg" alt="illustration-article">
+    <span>Learning</span>
 
-  Learning
-
-  Published 21 Dec 2023
-
-  HTML & CSS foundations
-
-  These languages are the backbone of every website, defining structure, content, and presentation.
-
-  Greg Hooper
+    <p>Published 21 Dec 2023</p>
   
-  <div class="attribution">
+    <h2>HTML & CSS foundations</h2>
+    
+    <p>
+      These languages are the backbone of every website, defining structure, content, and presentation.
+    </p>
+    <div>
+      <img src="./assets/images/image-avatar.webp" alt="Greg avatar">
+      <span>Greg Hooper</span>
+    </div>
+    
+  </main>
+
+  
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+    Coded by <a href="#">Christian Soldevilla</a>.
+  </footer>
 </body>
 </html>
