card ready for mobile

--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
 <body>
   <main>
     <img src="./assets/images/illustration-article.svg" alt="illustration-article">
-    <span>Learning</span>
 
-    <p>Published 21 Dec 2023</p>
-  
-    <h2>HTML & CSS foundations</h2>
+    <article>
+      <span>Learning</span>
+
+      <p class="date">Published 21 Dec 2023</p>
     
-    <p>
-      These languages are the backbone of every website, defining structure, content, and presentation.
-    </p>
+      <h2>HTML & CSS foundations</h2>
+      
+      <p class="content">
+        These languages are the backbone of every website, defining structure, content, and presentation.
+      </p>
+    </article>
+
     <div>
       <img src="./assets/images/image-avatar.webp" alt="Greg avatar">
       <span>Greg Hooper</span>
